--- a/example/android/app/src/main/res/layout/layout_stopwatch.xml
+++ b/example/android/app/src/main/res/layout/layout_stopwatch.xml
@@ -49,7 +49,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-        </TableRow>    </TableLayout>
+        </TableRow>
+    </TableLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
