--- a/server/public/css/landing-page.css
+++ b/server/public/css/landing-page.css
@@ -41,8 +41,8 @@ h6 {
 
 .intro-message {
     position: relative;
-    padding-top: 20%;
-    padding-bottom: 20%;
+    padding-top: 5em;
+    padding-bottom: 1em;
 }
 
 .intro-message > h1 {
@@ -62,10 +62,6 @@ h6 {
 }
 
 @media(max-width:767px) {
-    .intro-message {
-        padding-bottom: 15%;
-    }
-
     .intro-message > h1 {
         font-size: 3em;
     }
