--- a/server/html/layouts/main.html
+++ b/server/html/layouts/main.html
@@ -1,35 +1,55 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>{{username}} - ChetBot</title>
-    <link rel="icon" href="/favicon.ico">
-    <style type="text/css">
-      #avatar {
-        width: 50px;
-        border-radius: 25px;
-      }
-    </style>
-  </head>
+<html lang="en">
+  {{>head}}
   <body>
-    <img id="avatar" src="{{avatarUrl}}" title="{{displayName}} ({{username}})"/>
-    <h2>{{displayName}} (<a target="_blank" href="{{profileUrl}}" title="{{username}} on GitHub">{{username}}</a>)</h2>
-    <h3>Apps</h3>
-    <ul>
-      {{#apps}}
-      <li><a href="/app/{{.}}">App ({{.}})</a></li>
-      {{/apps}}
-      <li id="new-app" class="new">
-        <h4>Upload a new app</h4>
-        <input type="file"/>
-        <form action="/app" method="POST">
-          <input type="hidden" name="app_url" />
-        </form>
-        <p class="status"></p>
-      </li>
-    </ul>
+    <div id="wrapper">
+      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">ChetBot</a>
+        </div>
+        <ul class="nav navbar-right top-nav">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{displayName}} <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a></li>
+            </ul>
+          </li>
+        </ul>
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+          <ul class="nav navbar-nav side-nav">
+            <li>
+              <a href="/home"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+            </li>
+            <li>
+              <a href="/apps"><i class="fa fa-fw fa-rocket"></i> Apps</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <div id="page-wrapper">
+        <div class="container-fluid">
+        <!-- Page Heading -->
+        <div class="row">
+          <div class="col-lg-12">
+            {{{body}}}
+          </div>
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container-fluid -->
+      </div>
+    </div>
   </body>
 
-  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="/js/jquery.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
   <script>
     $('#new-app input[type=file]').on('change', function(e) {
       ga('send', 'event', 'app-upload', 'start');
