fully working Android chetbot injection using node

--- a/example/android/app/src/main/res/layout/layout_stopwatch.xml
+++ b/example/android/app/src/main/res/layout/layout_stopwatch.xml
@@ -52,6 +52,12 @@
         </TableRow>
     </TableLayout>
 
+    <EditText
+        android:id="@+id/text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"/>
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
