added app reset button

--- a/server/html/partials/material-design.html
+++ b/server/html/partials/material-design.html
@@ -2,6 +2,7 @@
 
 <link href="/components/paper-header-panel/paper-header-panel.html" rel="import">
 <link href="/components/paper-toolbar/paper-toolbar.html" rel="import">
+<link href="/components/paper-fab/paper-fab.html" rel="import">
 <link href="/components/iron-icons/iron-icons.html" rel="import">
 <link href="/components/iron-icons/av-icons.html" rel="import">
 <link href="/components/paper-icon-button/paper-icon-button.html" rel="import">
@@ -37,5 +38,10 @@
   a {
     text-decoration: none;
     color: #777;
+  }
+
+  paper-fab.secondary {
+    background-color: #fff;
+    color: #00BCD4;
   }
 </style>
