--- a/server/html/partials/material-design.html
+++ b/server/html/partials/material-design.html
@@ -22,6 +22,16 @@
     color: #fff;
     z-index: 2;
   }
+
+  paper-fab {
+    background-color: #FF5722;
+    color: rgba(255,255,255,0.87);
+  }
+
+  paper-fab.secondary {
+    background-color: #fff;
+    color: #00BCD4;
+  }
 </style>
 
 <style type="text/css">
@@ -40,8 +50,9 @@
     color: #777;
   }
 
-  paper-fab.secondary {
-    background-color: #fff;
-    color: #00BCD4;
+  #fab {
+    position: fixed;
+    right: 16px;
+    bottom: 16px;
   }
 </style>
