--- a/server/html/partials/material-design.html
+++ b/server/html/partials/material-design.html
@@ -32,6 +32,12 @@
     background-color: #fff;
     color: #00BCD4;
   }
+
+  paper-icon-button.compact {
+    padding: 0;
+    position: relative;
+    top: -0.33em;
+  }
 </style>
 
 <style type="text/css">
