--- a/server/html/partials/account-button.html
+++ b/server/html/partials/account-button.html
@@ -1,3 +1,3 @@
-<a class="account" href="/account" alt="{{displayName}}">
+<a class="account" href="/account/{{id}}" alt="{{displayName}}">
   <img src="{{avatarUrl}}"/>
 </a>
