added ability to delete app

--- a/server/html/partials/material-design.html
+++ b/server/html/partials/material-design.html
@@ -18,6 +18,11 @@
     border-radius: 12px;
   }
 
+  paper-toolbar .title a {
+    opacity: 0.5;
+    pointer-events: auto;
+  }
+
   paper-toolbar a {
     color: #fff;
     z-index: 2;
