added button for admins to add a user

--- a/server/html/partials/material-design.html
+++ b/server/html/partials/material-design.html
@@ -5,6 +5,7 @@
 <link href="/components/paper-fab/paper-fab.html" rel="import">
 <link href="/components/iron-icons/iron-icons.html" rel="import">
 <link href="/components/iron-icons/av-icons.html" rel="import">
+<link href="/components/iron-icons/social-icons.html" rel="import">
 <link href="/components/paper-icon-button/paper-icon-button.html" rel="import">
 
 <style is="custom-style">
