--- a/server/html/partials/set-location-dialog.html
+++ b/server/html/partials/set-location-dialog.html
@@ -2,7 +2,7 @@
     entry-animation="fade-in-animation"
     exit-animation="fade-out-animation"
     withBackdrop="true">
-  <paper-input name="lat" label="Latitude" type="number" min="-90" max="90" no-label-float="true" value="{{location.lat}}"></paper-input>
+  <paper-input name="lat" label="Latitude" type="number" min="-90" max="90" no-label-float="true" value="{{location.lat}}" autoFocus="true"></paper-input>
   <paper-input name="lon" label="Longitude" type="number" min="-180" max="180" no-label-float="true" value="{{location.lon}}"></paper-input>
   <div style="margin-top: 2em; text-align: right;">
     <paper-button onclick="close_dialog(this);"><iron-icon icon="clear"></iron-icon>Cancel</paper-button>
