--- a/server/html/partials/feedback-button.html
+++ b/server/html/partials/feedback-button.html
@@ -1,3 +1,3 @@
-<a href="mailto:chetbot@chetbox.com?subject=Chetbot%20feedback" target="_blank">
+<a href="mailto:feedback@boopjs.com?subject=boop.js%20feedback" target="_blank">
   <paper-icon-button icon="feedback" title="Leave feedback"></paper-icon-button>
 </a>
