--- a/server/html/partials/editor.html
+++ b/server/html/partials/editor.html
@@ -115,7 +115,7 @@
     <a class="back" href="javascript:showEditor();" title="Back to editor">
       <paper-icon-button icon="create"></paper-icon-button>
     </a>
-    <a class="run" href="javascript:run_test(editor.getSession().getDocument().getValue(), '{{server}}', '{{device.id}}');" title="Run test">
+    <a class="run" href="javascript:run_test(editor.getSession().getDocument().getValue(), '{{server}}', '{{device.id}}', '{{app.id}}', '{{code.id}}');" title="Run test">
       <paper-icon-button icon="av:play-arrow"></paper-icon-button>
       {{^user}}<span class="hint">&#8592; Press me</span>{{/user}}
     </a>
@@ -169,7 +169,7 @@
   }
 
   {{#user}}
-  repl = setup_repl('{{../server}}', '{{../device.id}}', 'repl', {
+  repl = setup_repl('{{../server}}', '{{../device.id}}', '{{../app.id}}', 'repl', {
     onClose: toggle_repl
   });
   {{/user}}
