fix REPL and demo

--- a/server/html/partials/editor.html
+++ b/server/html/partials/editor.html
@@ -169,7 +169,7 @@
   }
 
   {{#user}}
-  repl = setup_repl('{{../server}}', '{{../device.id}}', 'repl', {
+  repl = setup_repl('{{../server}}', '{{../device.id}}', '{{../app.id}}', 'repl', {
     onClose: toggle_repl
   });
   {{/user}}
