--- a/server/html/partials/rename-button.html
+++ b/server/html/partials/rename-button.html
@@ -1,3 +1,3 @@
-<a href="javascript:rename('/app/{{app_id}}/edit/{{id}}', null, 'paper-toolbar .title .name, head > title');">
+<a href="javascript:rename('/app/{{app_id}}/test/{{id}}', null, 'paper-toolbar .title .name, head > title');">
   <paper-icon-button icon="create"></paper-icon-button>
 </a>
