big header for report page

--- a/server/html/partials/material-design.html
+++ b/server/html/partials/material-design.html
@@ -18,20 +18,35 @@
 <style is="custom-style">
   paper-toolbar {
     --paper-toolbar-background: #00BCD4;
+    color: rgba(255,255,255,0.87);
   }
 
-  paper-toolbar .account img {
+  .paper-header {
+    background-color: #00BCD4;
+    color: rgba(255,255,255,0.87);
+    padding: 0 1em;
+    padding-top: 0.5em;
+  }
+
+  .paper-header .right {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    float: right;
+  }
+
+  paper-toolbar .account img, .paper-header .account img {
     width: 24px;
     height: 24px;
     border-radius: 12px;
   }
 
-  paper-toolbar .title a {
+  paper-toolbar .title a, .paper-header .title a {
     pointer-events: auto;
   }
 
-  paper-toolbar a {
-    color: #fff;
+  paper-toolbar a , .paper-header a {
+    color: rgba(255,255,255,0.87);
     z-index: 2;
   }
 
