--- a/server/html/partials/app-info.html
+++ b/server/html/partials/app-info.html
@@ -1,24 +1,33 @@
 <div class="app">
   <style scoped>
     .app-icon {
-      height: 100px;
-      width: 100px;
+      height: 50px;
+      width: 50px;
       border-radius: 18px;
-      margin: 50px 50px 5px 50px;
+      margin: 10px 0 5px 10px;
       -webkit-filter: drop-shadow(0 0 2px rgba(0,0,0,0.2));
       filter: drop-shadow(0 0 4px rgba(0,0,0,0.2));
     }
-    
-    h2 .identifier {
+
+    h2.app-name {
+      display: inline-block;
+      margin-left: 1em;
+      margin-bottom: 1em;
+      text-align: left;
+    }
+
+    h2.app-name .identifier {
       font-size: 0.67em;
       opacity: 0.5;
     }
 
-    h2 .version {
-      opacity: 0.33;
+    h2.app-name .version {
+      opacity: 0.5;
+      margin-left: 0.5em;
+      font-weight: 100;
     }
   </style>
 
   <img class="app-icon" src="{{icon}}" title="{{name}}"/>
-  <h2>{{name}} <span class="version">{{version}}</span><br><span class="identifier">{{identifier}}</span></h2>
+  <h2 class="app-name">{{name}} <span class="version">{{version}}</span><br><span class="identifier">{{identifier}}</span></h2>
 </div>
