tweak "running" colour in graphs

--- a/server/html/partials/graph-setup.html
+++ b/server/html/partials/graph-setup.html
@@ -4,7 +4,7 @@
     fill: [
       '#faa', // failed
       '#eee', // not_run
-      '#99f', // running
+      '#5af', // running
       '#cfc'  // successful
     ]
   })
