much prettier styling for report page

--- a/server/html/partials/material-design.html
+++ b/server/html/partials/material-design.html
@@ -16,6 +16,10 @@
 <link href="/components/paper-button/paper-button.html" rel="import">
 
 <style is="custom-style">
+  paper-header-panel > div.paper-header {
+    padding-bottom: 8px;
+  }
+
   paper-toolbar {
     --paper-toolbar-background: #00BCD4;
     color: rgba(255,255,255,0.87);
