make sure bottom of pages are not covered by fab

--- a/server/html/partials/material-design.html
+++ b/server/html/partials/material-design.html
@@ -20,6 +20,10 @@
     padding-bottom: 8px;
   }
 
+  paper-header-panel div.content {
+    margin-bottom: 78px;
+  }
+
   paper-toolbar {
     --paper-toolbar-background: #00BCD4;
     color: rgba(255,255,255,0.87);
