lower case app info text

--- a/server/html/partials/app-info.html
+++ b/server/html/partials/app-info.html
@@ -67,6 +67,6 @@
     <span class="graph-data">{{count failed.values}},{{count not_run.values}},{{count running.values}},{{count successful.values}}</span>
   </div>
   <div class="details">
-    <h2 class="app-name" title="{{identifier}}">{{name}} <span class="version">{{version}}</span><br><span class="updated">{{#updated_at}}Updated {{date_relative .}}{{/updated_at}}</span></h2>
+    <h2 class="app-name" title="{{identifier}}">{{name}} <span class="version">{{version}}</span><br><span class="updated">{{#updated_at}}updated {{date_relative .}}{{/updated_at}}</span></h2>
   </div>
 </div>
