--- a/server/html/partials/material-design.html
+++ b/server/html/partials/material-design.html
@@ -14,6 +14,7 @@
 <link href="/components/neon-animation/animations/fade-out-animation.html" rel="import">
 <link href="/components/paper-input/paper-input.html" rel="import">
 <link href="/components/paper-button/paper-button.html" rel="import">
+<link href="/components/paper-spinner/paper-spinner.html" rel="import">
 
 <style is="custom-style">
   paper-header-panel > div.paper-header {
