remove wait_until_idle

--- a/server/html/partials/editor.html
+++ b/server/html/partials/editor.html
@@ -210,7 +210,7 @@ window.addEventListener('message', function(event) {
     'view', 'views', 'bottommost', 'topmost', 'leftmost', 'rightmost', 'centermost', 'outermost', 'closest_to', 'furthest_from',  // selectors
     'location', 'size', 'text', 'id', 'class_of', 'visible', 'count', 'all_ids', // inspection
     'assert_true', 'assert_false', 'assert_equal', 'assert_visible', // assertions
-    'wait', 'wait_until_idle', 'wait_for', // wait
+    'wait', 'wait_for', // wait
     'open_uri' // IPC
   ];
   var my_completer = {
