improve login button UX

--- a/server/html/partials/try-it-banner.html
+++ b/server/html/partials/try-it-banner.html
@@ -5,12 +5,14 @@
               <h2 style="margin-bottom: 0.25em;">Upload your app</h2>
           </div>
           <div class="col-md-6 mc_embed_signup" style="text-align:center;">
-            <a class="login-button" href="/login" style="font-size:2em;">Sign in</a>
-              <!-- <form action="//chetbox.us11.list-manage.com/subscribe/post?u=58d85b483ebd1268a502c9291&amp;id=230f6d849e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate input-group form-group-lg" target="_blank" novalidate>
+            <a class="login-button github" href="/login" style="font-size:2em;">Sign in</a>
+              {{!--
+              <form action="//chetbox.us11.list-manage.com/subscribe/post?u=58d85b483ebd1268a502c9291&amp;id=230f6d849e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate input-group form-group-lg" target="_blank" novalidate>
                   <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="Email address" style="display: inline; width: auto;">
                   <div style="position: absolute; left: -5000px;"><input type="text" name="b_58d85b483ebd1268a502c9291_230f6d849e" tabindex="-1" value=""></div>
                   <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-default form-control" style="display: inline; width: auto;">
-              </form> -->
+              </form>
+              --}}
               </div>
           </div>
       </div>
