add in_webview to API

--- a/server/html/partials/editor.html
+++ b/server/html/partials/editor.html
@@ -206,7 +206,7 @@ window.addEventListener('message', function(event) {
   var builtin_fns = [
     'function', 'for', 'var', 'while', 'do', // JS
     'activity', 'content_view', 'run_on_ui_thread', // Activity
-    'tap', 'press', 'type_text', 'hide_keyboard', 'wait', 'screenshot', 'open_drawer', 'close_drawer', // interaction
+    'tap', 'press', 'type_text', 'hide_keyboard', 'wait', 'screenshot', 'open_drawer', 'close_drawer', 'in_webview', // interaction
     'view', 'views', 'bottommost', 'topmost', 'leftmost', 'rightmost', 'centermost', 'outermost', 'closest_to', 'furthest_from',  // selectors
     'location', 'size', 'text', 'id', 'class_of', 'visible', 'count', 'all_ids', // inspection
     'assert_true', 'assert_false', 'assert_equal', 'assert_visible', // assertions
