--- a/server/html/partials/documentation-button.html
+++ b/server/html/partials/documentation-button.html
@@ -1,3 +1,3 @@
-<a href="/docs/BOOP.JS%20API%20reference%20v0.7.3.pdf" target="_blank">
+<a href="{{> documentation-url}}" target="_blank">
   <paper-icon-button icon="content-copy" title="Documentation"></paper-icon-button>
 </a>
