new shiny landing page

--- a/server/html/partials/documentation-button.html
+++ b/server/html/partials/documentation-button.html
@@ -1,3 +1,3 @@
-<a href="{{> documentation-url}}" target="_blank">
+<a href="/docs" target="_blank">
   <paper-icon-button icon="content-copy" title="Documentation"></paper-icon-button>
 </a>
