--- a/server/html/partials/material-design-lite.html
+++ b/server/html/partials/material-design-lite.html
@@ -6,3 +6,42 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/styles/github-gist.min.css">
 <script defer src="https://code.getmdl.io/1.1.1/material.min.js"></script>
+<style>
+  .mdl-layout__header {
+    background-color: #4e265a;
+  }
+
+  .mdl-layout__content {
+    background-color: #f7f7f7;
+  }
+
+  .mdl-layout__content > *:first-child {
+    margin-top: 4px;
+  }
+
+  .mdl-layout__content > *:not(footer) {
+    margin-left: 56px;
+    margin-right: 56px;
+  }
+
+  .mdl-cell.card-container {
+    width: 330px;
+  }
+
+  .mdl-layout-title a {
+    color: inherit;
+    text-decoration: inherit;
+    font-weight: 300;
+  }
+
+  h1, h2, h3, h4 { font-weight: 100; }
+  h1 { font-size: 28px; }
+  h2 { font-size: 22px; }
+  h3 { font-size: 18px; }
+  h4 { font-size: 16px; }
+  pre { margin: 0; }
+
+  button > i {
+    margin-right: 0.5em;
+  }
+</style>
