cards on pricing page, factor out sign in button

--- a/server/html/partials/footer-public.html
+++ b/server/html/partials/footer-public.html
@@ -20,6 +20,9 @@
     <div class="mdl-logo">boop.js</div>
     <ul class="mdl-mini-footer__link-list">
       <li>
+        <a href="/">Home</a>
+      </li>
+      <li>
         <a href="/pricing">Pricing</a>
       </li>
       <li>
