purple rebrand for Polymer pages

--- a/server/html/partials/editor.html
+++ b/server/html/partials/editor.html
@@ -16,7 +16,7 @@
     }
 
     #statusbar {
-      background: #193c43;
+      background: #444;
       position: absolute;
       left: 0;
       right: 0;
