--- a/server/html/partials/material-design.html
+++ b/server/html/partials/material-design.html
@@ -15,6 +15,8 @@
 <link href="/components/paper-input/paper-input.html" rel="import">
 <link href="/components/paper-button/paper-button.html" rel="import">
 <link href="/components/paper-spinner/paper-spinner.html" rel="import">
+<link href="/components/paper-radio-group/paper-radio-group.html" rel="import">
+<link href="/components/paper-radio-button/paper-radio-button.html" rel="import">
 
 <style is="custom-style">
   /* branding hack */
