Google maps location preview

--- a/server/html/partials/set-location-dialog.html
+++ b/server/html/partials/set-location-dialog.html
@@ -5,6 +5,8 @@
 
   <h2>Device location</h2>
 
+  <img width="300" height="150" class="preview" />
+
   <paper-input name="lat" label="Latitude" type="number" min="-90" max="90" no-label-float="true" value="{{location.lat}}" autoFocus="true"></paper-input>
   <paper-input name="lon" label="Longitude" type="number" min="-180" max="180" no-label-float="true" value="{{location.lon}}"></paper-input>
   <div style="margin-top: 2em; text-align: right;">
@@ -14,6 +16,18 @@
 </paper-dialog>
 
 <script>
+  function preview_location() {
+    var $dialog = $('paper-dialog.location'),
+      lat = parseFloat($dialog.find('paper-input[name=lat]').get(0).value),
+      lon = parseFloat($dialog.find('paper-input[name=lon]').get(0).value),
+      location_set = !isNaN(lat) && !isNaN(lon);
+    if (location_set) {
+      $('paper-dialog.location img.preview').attr('src',
+        'http://maps.googleapis.com/maps/api/staticmap?center=' + lat + ',' + lon + '&zoom=8&scale=false&size=300x150&maptype=roadmap&markers=size:small%7Ccolor:0x4e265a%7C' + lat + ',' + lon
+      );
+    }
+  }
+
   function set_location(button) {
     var $dialog = $(button).parents('paper-dialog'),
         lat = parseFloat($dialog.find('paper-input[name=lat]').get(0).value),
@@ -39,4 +53,7 @@
       }
     });
   }
+
+  preview_location();
+  $('paper-dialog.location paper-input').on('keyup', preview_location);
 </script>
